[package]
name = "wasm_try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0" }
# bevy = { version = "0.6.0" }
console_error_panic_hook = "0.1"


[profile.release]
lto = true
opt-level = "z"